--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <section class="linha-produtos">
         <div class="carrossel-wrapper">
+          
             <div class="seta seta-esq">&#10094;</div>
 
             <div class="produtos" id="carrossel1">
@@ -72,6 +73,11 @@
                 <img src="img/vestidinhoinfantil.jpg" alt="Vestido Infantil">
                 <img src="img/calcabaggy.jpg" alt="Calça Baggy">
                 <img src="img/blusalistrada.jpg" alt="Blusa Listrada">
+                <img src="img/ciganinhabranca.jpg" alt="Ciganinha Branca">
+                <img src="img/saltopreto.jpg" alt="Salto Preto">
+                <img src="img/vestidinhoinfantil.jpg" alt="Vestido Infantil">
+                <img src="img/calcabaggy.jpg" alt="Calça Baggy">
+                <img src="img/blusalistrada.jpg" alt="Blusa Listrada">
             </div>
 
             <div class="seta seta-dir">&#10095;</div>
@@ -79,15 +85,11 @@
     </section>
 
     <footer class="rodape-inferior">
-        <div class="barra-busca-inferior">
-            <div class="input-wrapper">
 
-            </div>
             <div class="icones-ajuste">
                 <span>&#9881;</span> 
-                <span>&#10508;</span> 
             </div>
-        </div>
+
     </footer>
 
     <script src="script.js"></script>
