--- a/index.html
+++ b/index.html
@@ -100,5 +100,18 @@
     </footer>
 
     <script src="script.js"></script>
+<div id="meuModal" class="modal">
+    <div class="modal-conteudo">
+        <span class="fechar">&times;</span>
+        <h2 id="tituloModal">O que deseja fazer?</h2>
+        <p id="textoModal"></p>
+
+        <div class="botoes-modal">
+            <button id="botaoModal">OK</button> 
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
